View Issue Details

IDProjectCategoryView StatusLast Update
0033486Open CASCADEOCCT:Data Exchangepublic2023-09-25 12:47
Reporterika Assigned Toika  
PrioritynormalSeveritytrivial 
Status verifiedResolutionfixed 
Target Version7.8.0 
Summary0033486: Data Exchange - Mistake in processing of the oriented dimensions
DescriptionThe wrong way to retrieve the second and third elements of an array in STEPCAFControl_Reader.cxx setDimObjectToXCAF()

          //for Oriented Dimensional Location
          Handle(TColStd_HArray1OfReal) aDirArr = anAP->RefDirection()->DirectionRatios();
          gp_Dir aDir;
          if (!aDirArr.IsNull() && aDirArr->Length() > 2)
          {
            aDir.SetCoord(aDirArr->Lower(), aDirArr->Lower() + 1, aDirArr->Lower() + 2);
            aDimObj->SetDirection(aDir);
          }
          else if (aDirArr->Length() > 1)
          {
            aDir.SetCoord(aDirArr->Lower(), aDirArr->Lower() + 1, 0);
            aDimObj->SetDirection(aDir);
          }
Steps To ReproduceNot required
TagsNo tags attached.
Test case numbernot needed

Activities

git

2023-09-21 16:03

administrator   ~0114230

Branch CR33486 has been created by ika.

SHA-1: 873a805c47282a667cc06ab4cbd3adbb7fcb3c85


Detailed log of new commits:

Author: ika
Date: Thu Sep 21 14:01:59 2023 +0100

    0033486: Data Exchange - Mistake in processing of the oriented dimensions
    
    Remove using the array member's number instead of array member.

ika

2023-09-22 16:46

developer   ~0114258

Dear dpasukhi,

please review the branch CR33486.

Tests are OK, it seems we don't have any examples of oriented locations and nothing has changed.
http://jenkins-test-10.nnov.opencascade.com/view/CR33486-master-ika/view/COMPARE/

dpasukhi

2023-09-22 17:58

developer   ~0114259

Dear bugmaster,
please integrate
OCCT: CR33486
PROD: NO

jokwajeb

2023-09-25 12:22

administrator   ~0114270

Combination -
OCCT branch : IR-2023-09-22
master SHA - 38581280d00c854dcc91e8d8284aeae08a289142
38e09ead3f71b0f6ee0ece13e05a6f9009c86eba
Products branch : master SHA - c00d777bc21fca09e275ef4c9272442b9bd1caef
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Ubuntu2004-64:
OCCT
Total CPU difference: 18396.81000000019 / 18263.300000000214 [+0.73%]
Products
Total CPU difference: 12050.180000000018 / 12050.169999999993 [+0.00%]
Windows-64-VC142:
OCCT
Total CPU difference: 19139.078125 / 18426.265625 [+3.87%]
Products
Total CPU difference: 14235.40625 / 13940.40625 [+2.12%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2023-09-25 12:47

administrator   ~0114273

Branch CR33486 has been deleted by mnt.

SHA-1: 873a805c47282a667cc06ab4cbd3adbb7fcb3c85

Related Changesets

occt: master 38581280

2023-09-21 16:01:59

ika


Committer: jokwajeb Details Diff
0033486: Data Exchange - Mistake in processing of the oriented dimensions

Remove using the array member's number instead of array member.
Affected Issues
0033486
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx Diff File

Issue History

Date Modified Username Field Change
2023-09-21 15:45 ika New Issue
2023-09-21 15:45 ika Assigned To => ika
2023-09-21 16:03 git Note Added: 0114230
2023-09-22 16:43 ika Severity minor => trivial
2023-09-22 16:43 ika Test case number => not needed
2023-09-22 16:46 ika Assigned To ika => dpasukhi
2023-09-22 16:46 ika Status new => resolved
2023-09-22 16:46 ika Steps to Reproduce Updated
2023-09-22 16:46 ika Note Added: 0114258
2023-09-22 16:46 ika Target Version Unscheduled => 7.8.0
2023-09-22 17:58 dpasukhi Assigned To dpasukhi => bugmaster
2023-09-22 17:58 dpasukhi Status resolved => reviewed
2023-09-22 17:58 dpasukhi Note Added: 0114259
2023-09-25 12:22 jokwajeb Note Added: 0114270
2023-09-25 12:23 jokwajeb Changeset attached => occt master 38581280
2023-09-25 12:23 ika Assigned To bugmaster => ika
2023-09-25 12:23 ika Status reviewed => verified
2023-09-25 12:23 ika Resolution open => fixed
2023-09-25 12:47 git Note Added: 0114273