0033486: Data Exchange - Mistake in processing of the oriented dimensions

Remove using the array member's number instead of array member.